# expense_app

./: .gitignore  README.md  REPORT.md
ai-service/: .env.example  pyproject.toml
ai-service/app/: config.py  errors.py  main.py  models.py
ai-service/app/agents/: analyzer.py  llm.py  reporter.py
ai-service/app/routes/: analyze.py  health.py  report.py
backend/: .env.example  drizzle.config.ts  package.json
backend/src/: index.ts
backend/src/db/: index.ts
backend/src/db/migrations/: 0000_unusual_excalibur.sql  0002_talented_makkari.sql
backend/src/db/schema/: accounts.ts  expenseNotes.ts  expenses.ts  index.ts  invitations.ts  memberships.ts  organizations.ts  sessions.ts  users.ts  verifications.ts
backend/src/lib/: auth.ts  crypto.ts  response.ts
backend/src/middleware/: errorHandler.ts  rateLimiter.ts  requireAuth.ts
backend/src/modules/auth/: auth.routes.ts  auth.schemas.ts
backend/src/modules/expenses/: ai.routes.ts  expenses.routes.ts  expenses.schemas.ts  expenses.transitions.ts  expenses.types.ts
backend/src/modules/organizations/: organizations.routes.ts  organizations.schemas.ts
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/components/expenses/: ExpenseForm.tsx
frontend/src/components/ui/: Button.tsx  ErrorMessage.tsx  (+2 more)
frontend/src/hooks/: useSSEStream.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/store/: authStore.ts  expenseStore.ts
(+13 files in other folders)
